Added calculation of total radiance for rough surface with proper implementation of azimuth angles. Some plotting/vis functions added for rough surface spectra. Fixed non-diurnal (steady-state) mode stepping so that it doesn't use the diurnal model time array lengths as before.

--- a/.gitignore
+++ b/.gitignore
@@ -2068,3 +2068,5 @@ DustThicknessSpectraPlots/emissivity_spectrum_3.00e-05m.png
 DustThicknessSpectraPlots/emissivity_spectrum_4.00e-05m.png
 DustThicknessSpectraPlots/emissivity_spectrum_5.00e-05m.png
 DustThicknessSpectraPlots/emissivity_spectrum_5.00e-06m.png
+wn_wl.txt
+.DS_Store
