Added batch mode for ML training dataset generation. Added diurnal convergence feature, but still needs further testing.
Various bug fixes. Probably new buges introduced.

--- a/.gitignore
+++ b/.gitignore
@@ -2070,3 +2070,4 @@ DustThicknessSpectraPlots/emissivity_spectrum_5.00e-05m.png
 DustThicknessSpectraPlots/emissivity_spectrum_5.00e-06m.png
 wn_wl.txt
 .DS_Store
+thermal_model_fits_hybrid.pdf
